<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Apprem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="selected">Selected</string>
    <string name="seven_days_of_the_week">7 days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field cannot be empty!</string>
    <string name="time_error">Time field cannot be empty!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="please_set_school_website_url">Please set the URL of your school website in settings.</string>
    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>
    <string name="select">Select</string>
    <string name="homework">Homework</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="description_dialog">Description:</string>
    <string name="date_error">Date field cannot be empty!</string>
    <string name="edit_homework">Edit homework</string>
    <string name="add_homework">Add homework</string>
    <string name="date">Date</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field cannot be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>
    <string name="teachers">Teachers</string>
    <string name="add_teacher">Add teacher</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="add_exam">Add exam</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>
    <string name="enable_seven_days_setting">Enable 7 days of the Week</string>
    <string name="change_school_website_setting">Change school website</string>
    <string name="change_school_website_setting_summary">Change the URL of your school website</string>
    <string name="notification_visibility_setting">Show notification</string>
    <string name="notification_show_permanent_setting">Show permanently</string>
    <string name="notification_show_permanent_setting_desc">The notification can only be hidden manually</string>
    <string name="notification_alarm_setting">On fixed time</string>
    <string name="notification_alarm_setting_desc">Show the notification at a specific time</string>
    <string name="notification_reminder_setting">Remind before subject starts</string>
    <string name="notification_reminder_settings_desc">Send a loud notification %s minutes before the subject starts.</string>
    <string name="notification_notification_end_setting">Remind at the end of the subject</string>
    <string name="notification_notification_end_setting_desc">Send a silent notification at the end of the subject to inform you about your next subject.</string>
    <string name="notification_settings">Notification</string>
    <string name="notification_dismiss">Hide</string>
    <string name="permission_request_message">
        Apprem App requires the storage permission in order to backup your data. Please grant the permission.
        </string>
    <string name="permission_required">Authorization is required!</string>
    <string name="permission_required_description">These authorization (s) are required to ensure comprehensive functionality</string>
    <string name="permission_ok_button">Grant</string>
    <string name="permission_cancel_button">Cancel</string>
    <string name="no">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="dont_show_again">Do not show again</string>
    <string name="with_teacher">with</string>
    <string name="share_msg_in_room">in room</string>
    <string name="version">Version</string>
    <string name="backup">Backup</string>
    <string name="description">Description</string>
    <string name="select_start_time">Start</string>
    <string name="select_end_time">End</string>
    <string name="homework_activity_title">Homework</string>
    <string name="notes_activity_title">Notes</string>
    <string name="exams_activity_title">Exams</string>
    <string name="notification_summary_title">Today\'s lessons:</string>
    <string name="notification_next_week_title">Next lesson</string>
    <string name="nav_drawer_description">Timetable App</string>
    <string name="time_from">from</string>
    <string name="channel">Timetable</string>
    <string name="channel_important">Timetable important</string>
    <string name="channel_desc">A notification about your lessons</string>
    <string name="do_not_disturb_permission_desc">In order to automatically switch to do not disturb mode, the app requires the appropriate authorization</string>
    <string name="do_not_disturb_setting">Automatic Do not disturb</string>
    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects.</string>
    <string name="do_not_disturb_turn_off">Also turning off</string>
    <string name="do_not_disturb_turn_off_desc">Turn do not disturb mode off at the end of the subjects.</string>
    <string name="backup_successful">Backup has been saved to %s</string>
    <string name="backup_failed">Backup failed</string>
    <string name="import_successful">Restore succeeded</string>
    <string name="import_failed">Restore failed</string>
    <string name="restore">Restore</string>
    <string name="no_backup_found_in_downloads">No Backup found in %s</string>
    <string name="Documents">Documents</string>
    <string name="Downloads">Downloads</string>
    <string name="colorPickerDialog_preset">Presets</string>
    <string name="delete_content">Should %s be deleted?</string>
    <string name="delete_week">the subject %s</string>
    <string name="delete_note">the note %s</string>
    <string name="delete_exam">the exam %s</string>
    <string name="delete_everything">Delete Everything?</string>
    <string name="delete_everything_desc">You will not be able to recover any data!
        \nCreate Backup instead?</string>
    <string name="successfully_deleted_everything">Successfully deleted everything</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_email_app">No email app installed</string>
    <string name="choose_theme_setting">Choose theme</string>
    <string name="summary_activity_title">Summary</string>
    <string name="time_settings">Time settings</string>
    <string name="time_settings_desc">Settings about the start of your school and the length of your lessons.</string>
    <string name="show_preselection_list">Show preselection list of subjects</string>
    <string name="set_preselection_elements">Set the subjects of the list</string>
    <string name="profiles">Profiles</string>
    <string name="is_favorite">is favorite?</string>
    <string name="library">Library</string>
    <string name="page_number_picker_cancel_button_text">Cancel</string>
    <string name="page_number_picker_set_button_text">Set</string>
    <string name="page_number_picker_title_text">Jump to Page</string>
    <string name="pref_filter_results_category_title">Filter Results</string>
    <string name="pref_sort_results_category_title">Sort Results</string>
    <string name="pref_pagination_category_title">Pagination</string>
    <string name="pref_defaults_category_title">Defaults</string>
    <string name="pref_publication_type_key" translatable="false">printType</string>
    <string name="pref_publication_type_title">Publication Type</string>
    <string name="pref_publication_type_default" translatable="false">all</string>
    <string name="pref_publication_type_dialog_title">Select an option to display the results accordingly</string>
    <string name="pref_content_type_key" translatable="false">filter</string>
    <string name="pref_content_type_title">Content Type</string>
    <string name="pref_content_type_default" translatable="false">none</string>
    <string name="pref_content_type_dialog_title">Select an option to restrict the results accordingly</string>
    <string name="pref_sort_by_key" translatable="false">orderBy</string>
    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_default" translatable="false">relevance</string>
    <string name="pref_sort_by_dialog_title">Select on how you wish the results to be sorted</string>
    <string name="pref_page_to_display_key" translatable="false">startIndex</string>
    <string name="pref_page_to_display_title">Page to Display</string>
    <string name="pref_results_per_page_key" translatable="false">maxResults</string>
    <string name="pref_results_per_page_title">Results per page</string>
    <string name="pref_reset_settings_key" translatable="false">reset</string>
    <string name="pref_reset_settings_title">Reset Settings</string>
    <string name="pref_reset_settings_dialog_msg">Reset all to defaults?</string>
    <string name="pref_reset_settings_default" translatable="false">false</string>
    <string name="no_result_content_title_text">0H N0!</string>
    <string name="no_result_page_textline_1">&lt;b&gt;Zero books&lt;/b&gt; were returned for the search entry &lt;b&gt;\"<xliff:g example="Shakespeare12345" id="search_entry">%1$s</xliff:g>\"&lt;/b&gt;</string>
    <string name="no_result_page_textline_2">
        1. Re-validate your search query + search settings and then try again.
        If it fails again, then at the moment we do not have any bookrelated to your search query.
    </string>
    <string name="no_result_page_textline_3">
        2. Do visit us sometime later, to check for the book currently unavailable. Apologies for the inconvenience caused
    </string>
    <string name="network_error_title_text">Network Error</string>
    <string name="network_error_text_msg">Seems like there is an issue with the network connectivity.\n\nCheck whether the Airplane mode is Active, [ic_airplanemode_active_primary] may be seen in the above status bar. Turn this OFF if it is seen.\n\nValidate the Network settings and visit us back once done.</string>
    <string name="network_error_cancel_button_text">Cancel</string>
    <string name="network_error_settings_button_text">Check Settings</string>
</resources>