<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/schoolwebsitemenu"
            android:icon="@drawable/ic_web"
            android:title="@string/school_website" />
    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="none">
        <item
            android:id="@+id/summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/summary_activity_title" />
        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_exam"
            android:title="@string/exams_activity_title" />
        <item
            android:id="@+id/teachers"
            android:icon="@drawable/ic_lecturer"
            android:title="@string/teachers" />

        <item
            android:id="@+id/homework"
            android:icon="@drawable/ic_homework"
            android:title="@string/homework_activity_title" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes_activity_title" />
    </group>

    <group
        android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>