<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profiles"
        android:orderInCategory="100"
        android:title="@string/profiles"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="100"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_all"
        android:orderInCategory="100"
        android:title="@string/delete_everything"
        app:showAsAction="never" />
</menu>
