<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
          android:id="@+id/no_result_content_title_text_id"
          android:textSize="68sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/no_result_content_title_text"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/no_result_text_1_id"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/no_result_content_title_text_id"
          tools:text="@string/no_result_page_textline_1" />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="Here's some pro tips:"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:text="@string/no_result_page_textline_2"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:text="@string/no_result_page_textline_3"/>
   </LinearLayout>



</RelativeLayout>
