<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/dialog_toolbar"
        app:navigationIcon="@drawable/ic_alert_orange"
        app:title="@string/network_error_title_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_below="@id/dialog_toolbar"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no_wifi_signal"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_signal_no_internet"/>
        </LinearLayout>

        <TextView
            android:id="@+id/network_error_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/network_error_text_msg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/network_error_cancel_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/rubik_bold"
                android:backgroundTint="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/network_error_cancel_button_text"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/network_error_settings_button_text"
                android:id="@+id/network_error_settings_btn_id"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_bold"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>